Adding Money on Game

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -95,8 +95,10 @@
     <Compile Include="Assets\Scripts\Enemies.cs" />
     <Compile Include="Assets\Scripts\Flak.cs" />
     <Compile Include="Assets\Scripts\Placement.cs" />
+    <Compile Include="Assets\Scripts\PlayerStats.cs" />
     <Compile Include="Assets\Scripts\SpawnManager.cs" />
     <Compile Include="Assets\Scripts\Tower.cs" />
+    <Compile Include="Assets\Scripts\TurretBlueprint.cs" />
     <Compile Include="Assets\Scripts\TurretInfo.cs" />
     <Compile Include="Assets\Scripts\Waypoints.cs" />
     <None Include="Assets\ProCore\Polybrush\Shader\z_TriPlanarBlend_SfSrc.shader" />
